# VGU_Project_ROS

./: .clang-format  .clangd  .gitignore  .gitmodules  JOURNAL.md  README.md  build.sh  compile_commands.json  install.sh  launch_ursim.sh
.devcontainer/: Dockerfile  devcontainer.json  install.sh
.github/workflows/: generate-wiki.yaml
docs/: Gemfile  _config.yaml
src/dependencies/onrobot_rg2/: CMakeLists.txt  package.xml
src/dependencies/onrobot_rg2/urdf/: onrobot_rg2.xacro  onrobot_rg2_model.xacro  onrobot_rg2_model_macro.xacro
src/dependencies/onrobot_rg_description/urdf/: onrobot_rg2.xacro
src/dependencies/ur_description/: CMakeLists.txt  package.xml
src/fake_ur10e_control/: CMakeLists.txt  README.md  package.xml
src/fake_ur10e_control/src/: main.cpp  ur10e_fake_interface.cpp  ur10e_fake_interface.hpp
src/pickandplace_project/: CMakeLists.txt  package.xml
src/pickandplace_project/launch/: moveit_parameter.launch  moveit_parameter.launch.py  planner.launch.py  robot_planner.launch  unity_bridge.launch
src/pickandplace_project/src/: macros.hpp  main.cpp  robot_planner.cpp  unity_targets_listener.cpp  unity_targets_listener.hpp
src/ros_unity_bridge/: CMakeLists.txt  README.md  package.xml
src/ros_unity_bridge/config/: bridge_config.yaml
src/ros_unity_bridge/launch/: moveit_backend.launch  start_all.launch  unity_bridge.launch  ur10e_driver.launch
src/ros_unity_bridge/src/: common.hpp  dynamic_object_listener.cpp  energy_estimation.cpp  joint_debug.cpp  joint_debug.hpp  main.cpp  static_objects_listener.cpp  static_objects_listener.hpp  unity_objects_listener.cpp  unity_objects_listener.hpp  unity_targets_listener.cpp  unity_targets_listener.hpp
src/ros_unity_integration/: CMakeLists.txt  package.xml
src/ros_unity_integration/srv/: IntegrationService.srv
src/ros_unity_messages/: CMakeLists.txt  README.md  package.xml
src/ros_unity_messages/msg/: GripperControl.msg  SyncUnityObjects.msg  UnityDynamicObjects.msg  UnityObject.msg  UnityRequest.msg
src/rtde_echo/: CMakeLists.txt  package.xml
src/rtde_echo/config/: rtde_echo.yaml
src/rtde_echo/launch/: start.launch
src/rtde_echo/msg/: RtdeData.msg
src/rtde_echo/src/: main.cpp
src/ur10e_config/robot_description/: CMakeLists.txt  README.md  package.xml
src/ur10e_config/robot_description/urdf/: ur10e_rg2.urdf  ur10e_rg2.xacro
src/ur10e_config/robot_moveit/: .setup_assistant  README.md  package.xml
src/ur10e_config/robot_moveit/config/: fake_controllers.yaml  gazebo_ur10e_rg2.urdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur10e_rg2.ros2_control.xacro  ur10e_rg2.srdf  ur10e_rg2.urdf.xacro
src/ur10e_config/robot_moveit/launch/: demo.launch  demo.launch.py  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  planning_context.launch  ros_controllers.launch  rsp.launch.py  sensor_manager.launch.xml  setup_assistant.launch.py  simple_moveit_controller_manager.launch.xml  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
