<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pickandplace_project</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="130038743+LunaciaDev@users.noreply.github.com">Lunacia</maintainer>
  <license>MIT</license>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>rclcpp</depend>
  <!-- ROS - Unity Messages integration -->
  <depend>ros_unity_integration</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
