<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onrobot_rg2</name>
  <version>1.0.0</version>
  <description>Description for the OnRobot RG2 Gripper, in ROS2. Adapted from https://github.com/UOsaka-Harada-Laboratory/onrobot</description>
  <author email="taku8926@gmail.com">Takuya Kiyokawa</author>
  <maintainer email="130038743+LunaciaDev@users.noreply.github.com">Lunacia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
